# Robotics_Book

./: .gitignore  README.md  ultrasonic.md
1.description/: CMakeLists.txt  package.xml
1.description/launch/: description.launch.py
1.description/scripts/: 1.sh
1.description/urdf/: 1.urdf
TeensyCode/: .clang-format  Analysis.md.md  HC-SR04_tutorial.md  HC_SR04_With_Ros2_Example.md  compile_commands.json  platformio.ini
TeensyCode/common/core/: config.h  module.cpp  module.h  serial_manager.cpp  serial_manager.h
TeensyCode/modules/performance/: performance_monitor.cpp  performance_monitor.h
TeensyCode/modules/sensors/: sonar.cpp  sonar.h
TeensyCode/modules/storage/: sd_logger.cpp  sd_logger.h
TeensyCode/src/: sonar1.cpp
book/: elements_of_a_urdf.md
book/chapters/: Setup.md  a_bit_about_packages_and_nodes.md  brief_intro_to_bt.md  brief_intro_to_bt.xml  calibrating_odom.md  creating_a_custom_behavior.md  creating_your_first_workspace_and_package.md  metadata.yaml  navigating_with_rviz.md  ros_main_components_and_concepts.md  setup.md  the_urdf.md  urdf_thoughts.txt  urdfs.md  what_is_ros.md
book/media/: CalibratingDiameter.ods  CalibratingRotation.ods  repeat_until_successful.xml
book/media/behavior_trees/: beatings.xml  fallback1.xml  seq1.xml
book/notes/: CalibratingRotation_20241231.ods  Calibration script notes.txt  book_outline.md  calibrating_rotation.md  multiple visual elements in a link.md  nav2_goal.md  ss_2024_12_26.ods  urdf_def.txt
book/notes/blog/: 20250127.md
bt_stepper/: CMakeLists.txt  package.xml
bt_stepper/config/: bt1.xml  repeat_until_successful.xml  seq1.xml
bt_stepper/include/bt_stepper/: SS.hpp
bt_stepper/launch/: bt_run.launch.py  bt_stepper.launch.py
bt_stepper/src/: main.cpp  run.cpp
custom_behaviors/: CMakeLists.txt  CMakeListsXXX.txt  package.xml
custom_behaviors/config/: blink_light_test.xml  navigation_sim.yaml  say_something_test.xml
custom_behaviors/include/custom_behaviors/: say_something.hpp
custom_behaviors/launch/: sigyn.launch.py
custom_behaviors/src/: SaySomethingActionServer.cpp  blink_light.cpp  say_something.cpp
description/: CMakeLists.txt  package.xml
description/launch/: description.launch.py
description/rviz/: config.rviz
description/scripts/: 1.sh
description/urdf/: 1.urdf
description_1/: CMakeLists.txt  package.xml
description_1/launch/: description.launch.py
description_1/scripts/: 1.sh
description_1/urdf/: 1.urdf
description_2/: CMakeLists.txt  package.xml
description_2/launch/: description.launch.py
description_2/meshes/: map1.dae
description_2/rviz/: config.rviz
description_2/scripts/: 2.sh  3.sh
description_2/urdf/: 2.urdf  3.urdf
experiments/: CMakeLists.txt  package.xml
experiments/launch/: description.launch.py  exp.launch.py
experiments/urdf/: 1.urdf  ld06.urdf.xacro  ros2_control.xacro  sigyn.urdf.xacro
rviz/config/: config.rviz
scripts/: generate_book.sh
test_space/: CMakeLists.txt  package.xml
test_space/launch/: test_space.launch.py
test_space/urdf/: test.urdf.xacro
xacro/: config.yaml  test1.xacro  wheel.xacro
